# compmathlab3

./: pyproject.toml
src/: argparser.py  config.py  logger.py  main.py  presets.json
src/solvers/: base_solver.py  rect_solver.py  simpson_solver.py  trap_solver.py
src/utils/: integrals.py  math.py  meta.py  reader.py  validation.py  writer.py
